5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4171/executions/1646_2450.log
== SUBMITION (2019-04-09 16:35:43) 
-- CODE:
nome1 = (input("nome1: "))
nome2 = (input("nome2: "))

if nome1.upper() > nome2.upper()
-- EXECUTION TIME:
0.24138
-- ERROR:
  File "/home/codebench/codes/1646/2450/main.py", line 4
    if nome1.upper() > nome2.upper()
                                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:35:43) 
-- CODE:
nome1 = (input("nome1: "))
nome2 = (input("nome2: "))

if nome1.upper() > nome2.upper( )
-- ERROR:
File "XXXX", line 4
    if nome1.upper() > nome2.upper( )
                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:36:32) 
-- CODE:
nome1 = (input("nome1: "))
nome2 = (input("nome2: "))

if nome1.upper() > nome2.upper()
	print(nome1)
	print(nome2)
-- EXECUTION TIME:
0.207187
-- ERROR:
  File "/home/codebench/codes/1646/2450/main.py", line 4
    if nome1.upper() > nome2.upper()
                                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:36:32) 
-- CODE:
nome1 = (input("nome1: "))
nome2 = (input("nome2: "))

if nome1.upper() > nome2.upper()
	print(nome1)
	print(nome2)
-- ERROR:
File "XXXX", line 4
    if nome1.upper() > nome2.upper()
                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:36:52) 
-- CODE:
nome1 = (input("nome1: "))
nome2 = (input("nome2: "))

if nome1.upper() > nome2.upper():
	print(nome1)
	print(nome2)
-- ERROR:
File "XXXX", line 4
    if nome1.upper() > nome2.upper()
                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:37:07) 
-- CODE:
nome1 = (input("nome1: "))
nome2 = (input("nome2: "))

if nome1.upper() < nome2.upper():
	print(nome1)
	print(nome2)
-- OUTPUT:
Ada
Leon
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:37:28) 
-- CODE:
nome1 = (input("nome1: "))
nome2 = (input("nome2: "))

if nome1.upper() < nome2.upper():
	print(nome1)
	print(nome2)
-- OUTPUT:
Ada
Leon
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:38:24) 
-- CODE:
nome1 = (input("nome1: "))
nome2 = (input("nome2: "))

if nome1.upper() > nome2.upper():
	print(nome1)
	print(nome2)
-- OUTPUT:
Ada
Leon
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:40:22) 
-- CODE:
nome1 = (input("nome1: "))
nome2 = (input("nome2: "))

if nome1.upper() > nome2.upper():
	print(nome1.upper())
	print(nome2.upper())
-- EXECUTION TIME:
0.170531
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:

-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
MARCOS
DEMETRIUS
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
WILSON
GEORGE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:40:23) 
-- CODE:
nome1 = (input("nome1: "))
nome2 = (input("nome2: "))

if nome1.upper() > nome2.upper():
	print(nome1.upper())
	print(nome2.upper())
-- OUTPUT:
Ada
Leon
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:41:06) 
-- CODE:
nome1 = (input("nome1: "))
nome2 = (input("nome2: "))

if nome1.upper() > nome2.upper():
	print(nome1.upper())
	print(nome2.upper())
-- OUTPUT:
Ada
Leon
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:42:31) 
-- CODE:
nome1 = (input("nome1: "))
nome2 = (input("nome2: "))

if nome1 > nome2:
	print(nome1.upper())
	print(nome2.upper())
-- OUTPUT:
Ada
Leon
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:44:20) 
-- CODE:
nome1 = (input("nome1: "))
nome2 = (input("nome2: "))

if nome1 > nome2:
	print(nome1)
	print(nome2)
-- OUTPUT:
Ada
Leon
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:44:40) 
-- CODE:
nome1 = (input("nome1: "))
nome2 = (input("nome2: "))

if nome1 > nome2:
	print(nome1.upper())
	print(nome2)
-- OUTPUT:
Ada
Leon
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:51:07) 
-- CODE:
nome1 = (input("nome1: "))
nome2 = (input("nome2: "))

if nome1 < nome2:
	print(nome1.upper())
	print(nome2)
-- OUTPUT:
ADA
Leon
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:52:09) 
-- CODE:
nome1 = (input("nome1: "))
nome2 = (input("nome2: "))

if nome1 < nome2:
	print(nome1)
	print(nome2)
-- OUTPUT:
Ada
Leon
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 09:20:29) 
-- CODE:
nome1 = (input("nome1: "))
nome2 = (input("nome2: "))

if nome1 < nome2:
	print(nome2.upper())
	print(nome1.upper())
-- EXECUTION TIME:
0.191559
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
LEON
ADA
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:

-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
GEORGE
WILSON
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 09:20:30) 
-- CODE:
nome1 = (input("nome1: "))
nome2 = (input("nome2: "))

if nome1 < nome2:
	print(nome2.upper())
	print(nome1.upper())
-- OUTPUT:
LEON
ADA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 09:20:43) 
-- CODE:
nome1 = (input("nome1: "))
nome2 = (input("nome2: "))

if nome1 < nome2:
	print(nome2)
	print(nome1.upper())
-- EXECUTION TIME:
0.166123
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
Leon
ADA
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:

-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
george
WILSON
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 09:20:44) 
-- CODE:
nome1 = (input("nome1: "))
nome2 = (input("nome2: "))

if nome1 < nome2:
	print(nome2)
	print(nome1.upper())
-- OUTPUT:
Leon
ADA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 09:20:54) 
-- CODE:
nome1 = (input("nome1: "))
nome2 = (input("nome2: "))

if nome1 < nome2:
	print(nome2)
	print(nome1.upper())
-- OUTPUT:
Leon
ADA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
